# winrt-monorepo

./: .gitignore  CMakeLists.txt  CMakePresets.json  Package.swift  README.md  Readme.md  build.bat  configure-debug.bat  configure-release.bat  configure.bat  generate-all.ps1  generate-bindings.ps1  projections.json  swift-winrt.rsp
Sources/CWinAppSDK/: delayloadhelper.c
Sources/CWinAppSDK/nuget/include/: dwrite.h
Sources/CWinRT/include/: CWinRT.h  Microsoft.Graphics.Canvas.UI.Xaml.h
Sources/WinAppSDK/: Initialize.swift
Sources/WinUI/Application/: SwiftApplication.swift
swift-cwinrt/: CMakeLists.txt  generate-all.ps1  projections.json  swift-winrt.rsp
swift-cwinrt/Sources/CWinRT/include/: CWinRT.h  Microsoft.UI.Xaml.Controls.h  Microsoft.UI.Xaml.h  Microsoft.Windows.AI.Imaging.h  Microsoft.Windows.AI.Text.h  Microsoft.Windows.ApplicationModel.WindowsAppRuntime.h
swift-uwp/: CMakeLists.txt  projections.json  swift-winrt.rsp
swift-win2d/: CMakeLists.txt  README.md  projections.json  swift-winrt.rsp
swift-windowsappsdk/: CMakeLists.txt  Readme.md  generate-bindings.ps1  projections.json  swift-winrt.rsp
swift-windowsappsdk/Sources/CWinAppSDK/nuget/lib/arm64/: DWriteCore.lib  MRM.lib  Microsoft.WindowsAppRuntime.Bootstrap.lib  Microsoft.WindowsAppRuntime.lib
swift-windowsappsdk/Sources/WinAppSDK/: Initialize.swift
swift-windowsfoundation/: CMakeLists.txt  projections.json  swift-winrt.rsp
swift-winui/: CMakeLists.txt  projections.json  swift-winrt.rsp
swift-winui/Sources/WinUI/Application/: Application+CustomRunLoop.swift  MainRunLoopTickler.swift  SwiftApplication.swift
